# wasm-coredump

./: .gitignore  Cargo.toml  Makefile  README.md
ast/: Cargo.toml
ast/src/: ast.rs  coredump.rs  traverse.rs
docs/: dev.md  releasing.md
lib/asc-coredump/: Makefile  asconfig-wasi.json  asconfig.json  gen-set-frame.js  package-lock.json  package.json
lib/asc-coredump/assembly/: coredump-wasi.ts  coredump.ts  set-frame.ts
lib/asc-coredump/tests/: index.mjs
lib/ast/: Cargo.toml
lib/ast/src/: ast.rs  coredump.rs  lib.rs  traverse.rs
lib/coredump-builder/: Cargo.toml
lib/coredump-builder/src/: lib.rs  test.rs
lib/coredump-encoder/: Cargo.toml
lib/coredump-encoder/src/: lib.rs  test.rs
lib/coredump-to-stack/: Cargo.toml
lib/coredump-to-stack/src/: lib.rs
lib/coredump-types/: Cargo.toml
lib/coredump-types/src/: lib.rs
lib/parser/: Cargo.toml
lib/parser/src/: coredump.rs  lib.rs  test.rs
lib/printer/: Cargo.toml
lib/printer/src/: coredump.rs  lib.rs
lib/printer/src/wasm/: coredump.rs  mod.rs
lib/printer/src/wast/: coredump.rs  mod.rs
parser/: Cargo.toml
parser/src/: coredump.rs  lib.rs
printer/: Cargo.toml
printer/src/: lib.rs
rewriter/: Cargo.toml
rewriter/runtime/: Makefile  asconfig.json  coredump.ts
rewriter/src/: main.rs
rewriter/test/: expected.wast  test.bash
wasmgdb/: Cargo.toml
wasmgdb/src/: coredump.rs  main.rs  memory.rs
wasmgdb/src/commands/: examine.rs  find.rs  frames.rs  info.rs  mod.rs  parser.rs  print.rs
