[package]
name = "core-wasm-ast"
version = "0.1.9"
edition = "2021"
authors = ["Sven Sauleau <sven@sauleau.com>"]
license = "MIT"
keywords = ["wasm", "ast", "coredump"]
repository = "https://github.com/xtuc/wasm-coredump/tree/main/lib/ast"
description = "Wasm AST with traversal and manipulations"

[dependencies]
threadpool = "1.8.1"
num_cpus = "1.14.0"
log = "0.4.17"
wasm-coredump-types = { path = "../coredump-types", version = "0.1.9" }
