[package]
name = "wasm-coredump-builder"
version = "0.1.12"
edition = "2021"
authors = ["Sven Sauleau <sven@sauleau.com>"]
license = "MIT"
keywords = ["wasm", "rust", "coredump", "api"]
description = "Wasm coredump builder API for Rust"

[dependencies]
wasm-coredump-types = { path = "../coredump-types", version = "0.1.12" }
wasm-coredump-encoder = { path = "../coredump-encoder", version = "0.1.12" }
wasm-encoder = "0.23.0"
