[package]
name = "wasm-coredump-builder"
version = "0.2.1"
edition = "2021"
authors = ["Sven Sauleau <sven@sauleau.com>"]
license = "MIT"
keywords = ["wasm", "rust", "coredump", "api"]
description = "Wasm coredump builder API for Rust"

[dependencies]
wasm-coredump-types = { path = "../coredump-types", version = "0.2.1" }
wasm-coredump-encoder = { path = "../coredump-encoder", version = "0.2.1" }
wasm-encoder = "0.23.0"

[dev-dependencies]
wasm-printer = { path = "../printer", version = "0.2.1" }
