[package]
name = "coredump-to-stack"
version = "0.2.2"
edition = "2021"
authors = ["Sven Sauleau <sven@sauleau.com>"]
license = "MIT"
repository = "https://github.com/xtuc/wasm-coredump/tree/main/lib/coredump-to-stack"
description = "Convert a Wasm coredump to a Stacktrace, resolving symbols."

[dependencies]
wasm-parser = { path = "../../lib/parser", version = "0.2.2" }
wasm-printer = { path = "../../lib/printer", version = "0.2.2" }
core-wasm-ast = { path = "../../lib/ast", version = "0.2.2" }
object = { version = "0.29.0", features = ["wasm"] }
wasmgdb_ddbug_parser = { version = "0.3.2"}
rustc-demangle = "0.1.24"
