[package]
name = "wasm-parser"
version = "0.1.12"
edition = "2021"
authors = ["Sven Sauleau <sven@sauleau.com>"]
license = "MIT"
keywords = ["wasm", "decoder", "coredump"]
repository = "https://github.com/xtuc/wasm-coredump/tree/main/lib/parser"
description = "Wasm parser with coredump support"

[dependencies]
leb128 = "0.2.5"
nom = "7"
env_logger = "0.9.1"
log = "0.4.17"
core-wasm-ast = { path = "../ast", version = "0.1.12" }
wasm-coredump-types = { path = "../coredump-types", version = "0.1.12" }

[dev-dependencies]
wasm-coredump-encoder = { path = "../coredump-encoder", version = "0.1.12" }
wasm-coredump-builder = { path = "../coredump-builder", version = "0.1.12" }
wasm-printer = { path = "../printer", version = "0.1.12" }
